Fix overflow in admin panel

--- a/templates/admin/assets/styles/panel.css
+++ b/templates/admin/assets/styles/panel.css
@@ -186,7 +186,6 @@
 				right: 0;
 				text-indent: 0;
 				top: 0;
-				transform: scale(1);
 			}
 		}
 	}
@@ -274,8 +273,8 @@
 				height: 3em;
 				position: absolute;
 				right: 0;
-				transform: scale(1.25);
-				width: 3.5rem;
+				transform: scale(1.25) translateX(-0.25em);
+				width: 2.875rem;
 			}
 
 			&:hover:after
